Rubocop autocorrect most of the things

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,7 @@ AllCops:
   Exclude:
     - 'db/schema.rb'
     - 'vendor/**/*'
+    - 'bin/*'
 
 Layout/HashAlignment:
   EnforcedHashRocketStyle: table
