Rubocop the rest of the TODO things

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,6 +32,7 @@ Layout/SpaceBeforeBrackets:
 Metrics/BlockLength:
   Exclude:
     - 'config/routes.rb'
+    - config/environments/*.rb
 
 Metrics/MethodLength:
   Exclude:
