--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,7 +8,7 @@ test:
 
 amazon:
   service:           S3
-  access_key_id:     <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
   region:            us-west-2
-  bucket:            <%= ENV.fetch 'AWS_S3_BUCKET', 'mixtapeclub-production' %>
+  bucket:            <%= ENV.fetch 'AWS_S3_BUCKET',        'mixtapeclub-production' %>
+  access_key_id:     <%= ENV.fetch 'AWS_ACCESS_KEY_ID,     'TODO' %>
+  secret_access_key: <%= ENV.fetch 'AWS_SECRET_ACCESS_KEY, 'TODO' %>
