--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,14 +27,14 @@ Layout/LineLength:
 Layout/SpaceBeforeBrackets:
   Enabled: false
 
+Metrics/AbcSize:
+  Enabled: false
+
 Metrics/BlockLength:
-  Exclude:
-    - config/routes.rb
-    - config/environments/*.rb
+  Enabled: false
 
 Metrics/MethodLength:
-  Exclude:
-    - db/migrate/*
+  Enabled: false
 
 Naming/VariableNumber:
   EnforcedStyle: snake_case
