--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,10 @@
 require:
+  - rubocop
   - rubocop-capybara
+  - rubocop-factory_bot
   - rubocop-performance
   - rubocop-rails
   - rubocop-rspec
-  - rubocop-factory_bot
   - rubocop-rspec_rails
 
 AllCops:
